--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,18 @@ psycopg2==2.7.3.1
 pytz==2017.2
 redis==2.10.6
 vine==1.1.4
+amqp==2.2.2
+billiard==3.5.0.3
+celery==4.1.0
+Django==1.11.5
+django-celery-beat==1.0.1
+django-celery-results==1.0.1
+djangorestframework==3.6.4
+kombu==4.1.0
+olefile==0.44
+Pillow==4.2.1
+psycopg2==2.7.3.1
+pytz==2017.2
+redis==2.10.6
+sorl-thumbnail==12.3
+vine==1.1.4
